import mongoose from 'mongoose';

const projectSchema = new mongoose.Schema(
  {
    name: { type: String, required: true },
    slug: { type: String, required: true, unique: true, index: true },
    description: String,
    ownerId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true },
    organizationId: { type: mongoose.Schema.Types.ObjectId, ref: 'Organization' },
    sourceType: { type: String, enum: ['github', 'upload'], required: true },
    repositoryUrl: String,
    defaultBranch: { type: String, default: 'main' },
    framework: String,
    language: String,
    runtime: String,
    autoGeneratedDockerfile: String,
    deploymentStrategy: String,
    status: { type: String, enum: ['draft', 'analyzed', 'building', 'deployed', 'failed'], default: 'draft' },
    latestDeploymentId: { type: mongoose.Schema.Types.ObjectId, ref: 'Deployment' },
    deploymentUrl: String,
    customDomain: String,
    customDomainVerified: { type: Boolean, default: false },
    customDomainSslActive: { type: Boolean, default: false },
    environmentVariables: [
      {
        key: String,
        value: String,
        masked: { type: Boolean, default: true }
      }
    ],
    aiSummary: String,
    aiRecommendations: [String]
  },
  { timestamps: true }
);

export default mongoose.model('Project', projectSchema);
